--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>Welcome to OpenShift</title>
-  <link rel="stylesheet" type="text/css" href="lib/styles.css"/>
+  <link rel="stylesheet" type="text/css" href="lib/style.css"/>
   <script src="https://j1keycloak-thesteve0.rhcloud.com/auth/js/keycloak.js"></script>
 </head>
 
