--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ function fillTable(char) {
 
 <body style="margin-top: 20px;">
 
-<div class="container" style="display: none;">
+<div id="container" class="container" style="display: none;">
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
@@ -75,7 +75,7 @@ function fillTable(char) {
         <h3 class="text-muted">Welcome to D&D Character Generator</h3>
     </div>
 
-    <div class="jumbotron">
+    <div id="jumbotron" class="jumbotron">
         <table id="character" class="table table-striped table-bordered"></table>
     </div>
 </div>
