--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function fillTable(char) {
     <div class="header clearfix">
         <nav>
             <ul class="nav nav-pills pull-right">
-                <li><a href="#"><span id="email"></span></a></li>
+                <li><a href="#" onclick="keycloak.accountManagement()"><span id="email"></span></a></li>
                 <li><a href="#" onclick="request()">Generate character</a></li>
                 <li><a href="#" onclick="keycloak.logout()">Logout</a></li>
             </ul>
