--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function request() {
                     fillTable(JSON.parse(req.responseText));
                 } else {
                     console.debug('Request failed');
-                    document.getElementById('jumbotron').innerHTML = '<div class="alert alert-danger" role="alert">Request failed (' + req.status + ') </div>'
+                    document.getElementById('jumbotron').innerHTML = '<div class="alert alert-danger" role="alert">Request failed (' + req.statusText + ') </div>'
                 }
             }
         }
