--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Welcome to your D&D character</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css"/>
   <script src="https://j1keycloak-thesteve0.rhcloud.com/auth/js/keycloak.js"></script>
